<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="convert">Convert</string>
    <string name="choose_conversion">Choose Conversion</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="is_equal_to">" ="</string>
    <string name="History">History</string>
    <string name="hint1"><font size="15">Enter Value</font></string>
    <string name="hint2"><font size="15">Result</font></string>
    <string name="hint3"><font size="20">History:</font></string>
</resources>
