<?xml version="1.0" encoding="utf-8"?>




<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.converter.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:id="@+id/Tconversion"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/choose_conversion"
        tools:ignore="TextViewEdits" />

    <EditText
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/input"
        android:hint="@string/hint1"
        android:cursorVisible="true"
        android:layout_weight="1"
        android:background="?attr/colorButtonNormal"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColorLink="@android:color/black"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        app:layout_constraintBaseline_toBaselineOf="@+id/equal"
        android:layout_height="60dp"
        android:layout_width="150dp" />


    <TextView
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:id="@+id/equal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        tools:ignore="TextViewEdits"
        android:text="@string/is_equal_to"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toRightOf="@+id/input"
        app:layout_constraintRight_toLeftOf="@+id/result"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <Button
        android:text="@string/convert"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:id="@+id/button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.43"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="0dp"
        android:id="@+id/History"
        android:hint="@string/hint3"
        android:textSize="25sp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="?attr/colorButtonNormal"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.65999997"
        app:layout_constraintHorizontal_bias="0.37"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/result"
        android:hint="@string/hint2"
        android:layout_weight="1"
        android:shadowColor="@android:color/white"
        android:background="?attr/colorButtonNormal"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:gravity="center"

        android:textColorLink="@android:color/black"
        android:textCursorDrawable="@android:color/black"
        android:layout_height="60dp"
        android:layout_width="150dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        app:layout_constraintBaseline_toBaselineOf="@+id/input"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:textAlignment="center" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/Tconversion">

        <RadioButton
            android:layout_height="match_parent"
            android:id="@+id/f2c"
            android:text="@string/fahrenheit_to_celsius"
            app:buttonTint="@android:color/black"
            android:layout_width="match_parent"
            android:layout_weight="1"

            android:checked="true" />


        <RadioButton
            android:text="@string/celsius_to_fahrenheit"
            android:id="@+id/c2f"
            app:buttonTint="@android:color/black"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:layout_width="match_parent" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>


